--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<p>Anuprita Kishore | Nivedita | Sukanya | Sudha</p>
 							<ul class="actions">
 								<li>
-									<a href="team.html" class="button big alt">More</a>
+									<a href="team.html" class="button">More</a>
 								</li>
 							</ul>
 						</div>
@@ -64,7 +64,7 @@
 							<p>In this blog you'll know how we build this project. and how we used AWS Services to develope and deploy this clodu native applicaiton.</p>
 							<ul class="actions">
 								<li>
-									<a href="project.html" class="button big alt">More</a>
+									<a href="project.html" class="button">More</a>
 								</li>
 							</ul>
 						</div>
@@ -82,7 +82,7 @@
 					<a href="#" class="image fit"><img src="images/report.png" alt="" /></a>
 					<ul class="actions">
 						<li>
-							<a href="#" class="button big alt">Demo</a>
+							<a href="#" class="button">Demo</a>
 						</li>
 					</ul>
 				</div>
