--- a/team.html
+++ b/team.html
@@ -75,7 +75,7 @@
 						</div>
 					</article>
 					<article class="feature left">
-						<span class="image"><img src="images/nivedita.jpeg" alt="" style="width:400px;height:300px;"/></span>
+						<span class="image"><img src="images/sukanya.jpeg" alt="" style="width:400px;height:300px;"/></span>
 						<div class="content">
 							<h2>Sukanya De</h2>
 							<p>Senior Database Administrator at Infor</p>
