--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="report.html">Report</a></li>
+					<li><a href="test.html">Report</a></li>
 					<li><a href="project.html">Project</a></li>
 					<li><a href="team.html">Team</a></li>
 				</ul>
@@ -37,8 +37,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<span class="image"><img src="images/icon-covid.png" alt="COVID-19" style="width:200px;height:200px;"/></span>
-				<h2>Covid Report</h2>
-				<p>Serveless AWS | S3 | QuickSight | Athena | Blue Green Deployment</p>
+				<h2>PGPCC Capstone</h2>
+				<p>CI/CD with Blue green deployment using AWS Services</p>
 				<ul class="actions">
 					<li><a href="project.html" class="button big special">Learn More</a></li>
 				</ul>
@@ -84,7 +84,7 @@
 					<a href="#" class="image fit"><img src="images/report.png" alt="" /></a>
 					<ul class="actions">
 						<li>
-							<a href="#" class="button">Demo</a>
+							<a href="report.html" class="button">Demo</a>
 						</li>
 					</ul>
 				</div>
