--- a/team.html
+++ b/team.html
@@ -34,17 +34,15 @@
 
 		<!-- Main -->
 			<section id="main" class="wrapper">
-				<div class="container">
+				<div class="container" style="align-content: center;">
 
 					<header class="major special">
 						<h2>Our Team</h2>
-						<p>Details of ourselves and our professional Details</p>
 					</header>
 
-					<a href="#" class="image fit"><img src="images/team.png" alt="" /></a>
-					<p>Vis accumsan feugiat adipiscing nisl amet adipiscing accumsan blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo. Interdum ante aliquet commodo accumsan vis phasellus adipiscing. Ornare a in lacinia. Vestibulum accumsan ac metus massa tempor. Accumsan in lacinia ornare massa amet. Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan.</p>
-					<p>Amet nibh adipiscing adipiscing. Commodo ante vis placerat interdum massa massa primis. Tempus condimentum tempus non ac varius cubilia adipiscing placerat lorem turpis at. Aliquet lorem porttitor interdum. Amet lacus. Aliquam lobortis faucibus blandit ac phasellus. In amet magna non interdum volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan commodo odio cubilia ac eu interdum placerat placerat arcu commodo lobortis adipiscing semper ornare pellentesque.</p>
-					<p>Amet nibh adipiscing adipiscing. Commodo ante vis placerat interdum massa massa primis. Tempus condimentum tempus non ac varius cubilia adipiscing placerat lorem turpis at. Aliquet lorem porttitor interdum. Amet lacus. Aliquam lobortis faucibus blandit ac phasellus. In amet magna non interdum volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet blandit adipiscing arcu ante.</p>
+					<a href="#" class="image fit"><img src="images/team.png" alt="" style="width:700px;height:350px;"/></a>
+					<p>Team 17, We are team of 4 members.</p>
+					
 
 				</div>
 			</section>
@@ -56,7 +54,7 @@
 						<span class="image"><img src="images/anuprita.jpeg" alt="" /></span>
 						<div class="content">
 							<h2>Anuprita Kishore</h2>
-							<p>Principal Architect @ Infrastructure Management Services</p>
+							<p>Principal Architect at Infrastructure Management Services</p>
 							<p>Experience: 11 Years</p>
 							<a href="https://www.linkedin.com/in/anuprita-kishore-1aa11531/" class="icon fa-linkedin">
 								<span class="label">LinkedIn</span>
