--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="test.html">Report</a></li>
+					<li><a href="report.html">Report</a></li>
 					<li><a href="project.html">Project</a></li>
 					<li><a href="team.html">Team</a></li>
 				</ul>
